--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -7,7 +7,7 @@ security:
         user_provider:
             entity:
                 class: App\Entity\User
-                property: username
+                property: email
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -22,8 +22,8 @@ security:
             # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
 
             form_login:
-                login_path: auth
-                check_path: auth
+                login_path: authorize
+                check_path: authorize
             # https://symfony.com/doc/current/security/form_login_setup.html
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
