SignIn/SignUp Done omw

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -2,6 +2,7 @@ security:
     encoders:
         App\Entity\User:
             algorithm: bcrypt
+            cost: 12
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
         user_provider:
@@ -12,21 +13,26 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-            provider: user_provider
         main:
             anonymous: ~
 
             # activate different ways to authenticate
 
-            # http_basic: ~
+#            http_basic: ~
             # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
 
             form_login:
-                login_path: authorize
-                check_path: authorize
+                login_path: signin
+                check_path: signin
+                provider: user_provider
+                username_parameter: user_login[email]
+                password_parameter: user_login[password]
+            logout:
+                path:   /logout
+                target: /
             # https://symfony.com/doc/current/security/form_login_setup.html
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+         - { path: ^/admin, roles: ROLE_USER }
