--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -5,3 +5,11 @@ logout:
     path: /logout
 signin_user:
     path: /authorize/signin
+
+home:
+    path: /home
+    controller: App\HomePage\HomePage::home
+
+mailsent:
+    path: /mailsent
+    controller: App\Controller\UserConfirmation::indexAction
