--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,10 @@
         "symfony/flex": "^1.0",
         "symfony/form": "^4.0",
         "symfony/framework-bundle": "^4.0",
+        "symfony/http-client": "^4.0",
         "symfony/lts": "^4@dev",
         "symfony/maker-bundle": "^1.11",
-        "symfony/monolog-bundle": "^3.1",
+        "symfony/monolog-bridge": "^4.0",
         "symfony/orm-pack": "^1.0",
         "symfony/process": "^4.0",
         "symfony/security-bundle": "^4.0",
